syntax = "proto3";

//package calculus.proto.lv2;

message LoginRequest {
	string phone_number = 1;

	string password = 2;
	string password_md5 = 3;
};

message LoginResponse {
	string skey = 1;
};





//注册请求
message RegisterRequest {
	string phone_number = 1;

	string password = 2;
	string password_md5 = 3;
};

message RegisterResponse {
};



//验证码请求
message VerifyRequest {
	string phone_number = 1;

	string code = 2;
};

message VerifyResponse {
	string verify_result = 1;
};




//重置密码请求
message PasswordRequest {
	string phone_number = 1;
	string password = 2;
	string password_md5 = 3;
};

message PasswordResponse {
	string change_result = 1;
};




//查询号码请求请求
message PhoneNumberRequest {
	string id = 1;

};

message PhoneNumberResponse {
	string phone_number = 1;
};

